--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <nav>Meny</nav>
+    <header>bild eller en logga</header>
+    <main>allt innehåll</main>
+    <footer></footer>
 </body>
+
 </html>
