--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
 <body>
 
-    <div class="topnav">
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
+    
     <div class="header"><b>Albin Petersson</b></div>
+    <div class="topnav">
+        <a href="#">Foton</a>
+        <a href="#">CV</a>
+        <a href="#">Om Mig</a>
     <div class="top-left"></div>
     <!-- <header>bild eller en logga</header> -->
     <!-- <main>allt innehåll</main> -->
