--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
 <body>
     
     <div class="sidenav">
-        <a href="https://www.youtube.com/watch?v=yK5oeV_JYy0">Foton</a>
-        <a href="https://www.youtube.com/watch?v=yK5oeV_JYy0">CV</a>
-        <a href="https://www.youtube.com/watch?v=yK5oeV_JYy0">Om Mig</a>
+        <a href="https://www.youtube.com/watch?v=yK5oeV_JYy0"><img src="kamera.png" alt="Foton" style="width: 50px;height: 50px,;"></a>
+        <a href="https://www.youtube.com/watch?v=yK5oeV_JYy0"><img src="kamera.png" alt="Foton" style="width: 50px;height: 50px,;"></a>
+        <a href="https://www.youtube.com/watch?v=yK5oeV_JYy0"><img src="kamera.png" alt="Foton" style="width: 50px;height: 50px,;"></a>
+    </div>
 
-<body background ="larry.jpg"></body>
+    
+<body style= "background-color: rgba(73, 73, 73, 0.877);"></body>
+
+
+
 
     <!--div class="back-pic"-->
 
@@ -28,7 +33,7 @@
         <!-- <main>allt innehåll</main> -->
         <!-- <footer>sidfot</footer> -->
         <nav></nav>
-        <!-- <img class="back-pic" src="larry.jpg" alt="Larry Trainor"> -->
+        <!-- <img class="my-pic" src="larry.jpg" alt="Larry Trainor"> -->
         <!-- <a id="larry" href="https://doompatrol.fandom.com/wiki/Larry_Trainor">larry</a> -->
 
 
