worked on infobox

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
 
 
     <body>
-        <div class="border"></div>
+        <div class="border">
+            <p>Namn: Albin Petersson</p>
+            <p>Födelsedatum: 2003 04 14</p>
+            <p>Skola: Fyrvalla</p>
+        </div>
 
-    
 
+        <img class="my-pic" src="Albin.png" style="vertical-align: middle;margin: -500px 1170px;">
 
 
 
